--- a/src/app/welcome-admin/welcome-admin.component.html
+++ b/src/app/welcome-admin/welcome-admin.component.html
@@ -9,8 +9,8 @@
     </div>
     <ul>
       <li><a routerLink="/notification"[innerHTML]="bell_icon"alt="Photo Icon" class="nav-icon"></a></li>
-      <li><a [routerLink]="['/notification', employees]">View</a><img [src]="boy_icon" alt="Photo Icon" class="nav-icon">
-        </li>
+      <li><a  (click)="showNotification()"><img [src]="boy_icon" alt="Photo Icon" class="nav-icon">
+        </a></li>
 
 
 
@@ -19,9 +19,9 @@
   </nav>
   <div class="admin-container" id="admin-details">
 
-    <p id="adminname">Admin</p>
-    <p id="adminemail">admin</p>
-    <p id="adminemail">ID: 23456789</p>
+    <p id="adminname">{{username}}</p>
+    <p id="adminemail">{{email}}</p>
+    <p id="adminemail">ID: {{id}}</p>
 
 
     <span class="Logout" (click)="onsave1()">Logout</span>
@@ -30,24 +30,46 @@
 
   <div class="admin-welcome">
     <!-- <span class="notification-icon" [innerHTML]="bell_icon"(click)="onsave()"></span> -->
-    <span>Welcome, Admin!</span>
+    <span>Welcome, {{username}}!</span>
   </div>
+  <!-- <div class = "content" *ngFor = "let employee of employees"><span>{{employee}}</span></div> -->
 
   <div class="content">
-    <button class="view-users-button"(click)="onsave2()">View Users</button>
+    <button class="view-users-button"(click)="onsave2()">View Employee</button>
 
   </div>
   <div class="content">
-    <button class="view-users-button"(click)="onsave3()">User List Attendance</button>
+    <button class="view-users-button"(click)="onsave3()">Employee List Attendance</button>
 
   </div>
   <div class="content">
     <button class="view-users-button"(click)="onsave4()">Mark attendance</button>
 
   </div>
-  <div class="content1">
-    <button class="logout"(click)="onsave1()">Logout</button>
+  <div class="content">
+
+    <mat-form-field>
+      <mat-label>Employee absence requests</mat-label>
+      <mat-select [(ngModel)]="selectedLevel" (selectionChange)="onsave5()">
+          <mat-option *ngFor="let employee of employees" [value]="employee.valueId">{{employee.viewValue}}</mat-option>
+
+      </mat-select>
+
+    </mat-form-field>
+
 
   </div>
+
+  <!-- <div class="content1">
+    <button class="logout"(click)="onsave1()">Logout</button>
+
+  </div> -->
+  <!-- <mat-form-field>
+    <mat-label>Favorite food</mat-label>
+    <mat-select>
+        <mat-option *ngFor="let food of foods" [value]="food.value">{{food.viewValue}}</mat-option>
+    </mat-select>
+  </mat-form-field> -->
+
 
 </body>
