--- a/src/app/attendance/attendance.component.css
+++ b/src/app/attendance/attendance.component.css
@@ -9,29 +9,38 @@
     align-items: center;
     height: 100vh;
 } */
+* {
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+}
 body
 {
     background-image: url("/assets/astreya_background.png");
-    margin: 0;
+    background-color: #2d3440;
+    height: 100%;
+    background-repeat: no-repeat;
+  background-size: auto;
 }
 .login-container {
-    
+
     /* background-color: #fff; */
     border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0 0px 0px rgba(0, 0, 0, 0.2); */
     padding: 15px;
-    min-height: 80vh;
+    /* min-height: 80vh; */
     margin: 0;
     text-align: center;
 }
 
 .login-container h2 {
     font-family:Georgia, 'Times New Roman', Times, serif;
-    margin-bottom: 60px;
-    margin-top: 110px;
+    margin-bottom: 40px;
+    margin-top: 100px;
     text-align: center;
     color: #fff;
 }
+
 
 .login-container button {
     background-color: #fdfcfa;
@@ -41,7 +50,7 @@ body
     border-radius: 3px;
     cursor: pointer;
     width: 35%;
-    margin-top: 50px;
+    margin-top: 20px;
     font-size: 18px;
 
 }
@@ -57,16 +66,17 @@ body
 
 nav {
   /* background-color: #f0eaea; */
-  padding: 15px;
+  padding: 5px;
   display: flex;
-  gap: 62rem;
+  gap: 52rem;
+  /* margin: 10px; */
 }
 
 ul {
   list-style-type: none;
   margin: 0;
-  padding: 20px;
-  overflow: hidden;
+  padding: 2px;
+  /* overflow: hidden; */
 }
 
 li {
@@ -78,3 +88,27 @@ a {
   color: #fff;
   text-decoration: none;
 }
+.video{
+ position: relative;
+}
+video{
+  object-fit: cover;
+}
+/* #overlay {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+} */
+
+/* canvas#overlay {
+  position: absolute;
+  object-fit: cover;
+} */
+
+/* #overlay{
+  position: absolute;
+   top: 0; 
+   left: 0; 
+   height: 100vh;
+   width: 100vw;
+} */
