--- a/src/app/attendance/attendance.component.html
+++ b/src/app/attendance/attendance.component.html
@@ -1,5 +1,5 @@
-<body class="h-100">
-    <nav>
+<body *ngIf="!showAttendanceSection">
+    <!-- <nav>
         <div class="nav-left">
             <img [src]="image" alt="Logo" class="logo2">
         </div>
@@ -8,6 +8,27 @@
           <li><a routerLink="/login">Login</a></li>
           <li><a routerLink="/contact">Contact</a></li>
         </ul>
+      </nav> -->
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="background-color: rgba(255, 20, 8, 0.193);">
+            <span class="navbar-toggler-icon" ></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mt-4 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="/login">Login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
     <div class="login-container">
        
@@ -15,8 +36,21 @@
         <!-- <img [src]="image" alt="Logo" class="logo1"> -->
         <h2>Let your attendance be your passport to success</h2>
         
-         <button type="Upload" (click)="onsave()">Mark your attendance here</button>
+        <button type="button" (click)="toggleAttendance()">Mark your attendance here</button>
          
          </div>
         
+        
 </body>
+<div *ngIf="showAttendanceSection" class="video">
+ 
+  <video #video style="height: 100vh; width: 100vw;" autoplay muted playsinline></video>
+  <canvas #overlay style="position: absolute; top: 0; left: 0; height: 100vh; width: 100vw;"></canvas>
+  <!-- <canvas #overlay width="100%" height="100%"></canvas> -->
+  
+</div>
+
+
+
+
+
