--- a/src/app/face-recognised/face-recognised.component.html
+++ b/src/app/face-recognised/face-recognised.component.html
@@ -1,20 +1,19 @@
 <!-- <p>face-recognised works!</p> -->
 <body>
-    <nav>
-        <div class="nav-left">
-            <img [src]="image" alt="Logo" class="logo2">
+
+    <div class="logincontainer">
+        <div class="login-container">
+            <h3>Welcome to Astreya!</h3>
+            <img [src]="img" alt="Logo" class="logo">
+            <h5><I>Face Recognised</I></h5>
+            <h5>Thank You!</h5>
+            <h5>{{message}}</h5>
+            <!-- <button type="Upload" (click)="onsave()">Redirect to next page</button> -->
+            <!-- <button type="Upload" (click)="onsave1()">Log In</button> -->
         </div>
-        
-      </nav>
-    <div class="login-container">
-       
-        <h3>Welcome to Astreya!</h3>
-        <img [src]="img" alt="Logo" class="logo">
-         <h5><I>Face Recognised</I></h5>
-         <button type="Upload" (click)="onsave()">Redirect to next page</button>
-         <button type="Upload" (click)="onsave1()" >Log In</button>
-         
-         </div>
-         
-        
-</body>
+    </div>
+    <!-- <div class="captured_image">
+        <img *ngIf="url" [src]="url" alt="Captured Image" /> -->
+    <!-- <img src="{{url}}" alt=""> -->
+    <!-- </div> -->
+  </body>
