--- a/src/app/welcome-admin/welcome-admin.component.css
+++ b/src/app/welcome-admin/welcome-admin.component.css
@@ -15,17 +15,12 @@ nav {
   padding: 15px;
   display: flex;
   gap: 75rem;
- 
+
 }
 .nav-icon{
 
-  width: 25px;
-    height: 25px;
-}
-.notification-icon{
-  width: 25px;
-    height: 25px;
-  
+  width: 30px;
+    height: 30px;
 }
 
 
@@ -38,7 +33,7 @@ ul {
 
 li {
   float: left;
-  margin-right: 25px;
+  margin-right: 20px;
 }
 
 a {
@@ -46,91 +41,73 @@ a {
   text-decoration: none;
 }
 
-.header {
-  background-color: #333;
-  color: #fff;
-  padding: 2px;
+.employee-container {
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  padding: 90px;
+  width: 300px;
   text-align: center;
-
 }
 
-.admin-welcome {
-  text-align: center;
-  padding: 20px;
-  color: #fff;
-  font-size: 30px;
-}
-
-
-.view-users-button {
-  background-color: #fff; 
+h3 {
   color: #333;
-  padding: 10px 10px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 14px;
-  
 }
-.logout{
-  background-color: orangered; 
-  color: #fff;
-  padding: 10px 10px;
-  border: none;
+
+.options {
+  margin-top: 20px;
+}
+
+.options a {
+  display: block;
+  margin-bottom: 10px;
+  padding: 10px;
+  background-color: #ff8001;
+  color: black;
+  text-decoration: none;
   border-radius: 5px;
-  cursor: pointer;
-  font-size: 15px;
-  
-  
-
+  transition: background-color 0.3s ease;
 }
 
-.content {
-  padding: 12px;
-  text-align: center;
-}
-.content1 {
-  padding: 40px;
-  text-align: center;
+.options a:hover {
+  background-color: #333;
 }
 .admin-container {
-  top: 110px;
-   right: 110px;
-   background-color: #fff; 
-   color: #333; 
-   padding: 20px;
-   display: none;
-   width: 180px;
-   position: fixed;
-   font-family: Arial, sans-serif;
-   border-radius: 10px; /* Rounded corners */
-   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); 
+top: 110px;
+ right: 110px;
+ background-color: #fff;
+ color: #333;
+ padding: 15px;
+ display: none;
+ width: 180px;
+ position: fixed;
+ font-family: Arial, sans-serif;
+ border-radius: 10px; /* Rounded corners */
+ box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 
 #adminname, #adminemail {
- margin: 0;
- font-size: 18px;
- margin-bottom: 12px;
- /* font-weight: bold; */
+margin: 0;
+font-size: 15px;
+margin-bottom: 12px;
+/* font-weight: bold; */
+}
+.Logout{
+cursor: pointer;
+font-size: 16px;
+align-self: flex-end;
+font-weight: bold;
+color: black;
+
 }
 
 
-
-.Logout{
-  cursor: pointer;
-  font-size: 18px;
-  align-self: flex-end; 
-  font-weight: bold;
-  color: black;
-  
- }
- .close-button {
-  cursor: pointer;
-  font-size: 18px;
-  /* align-self: flex-end;  */
-  margin-right: 20px;
- }
+.close-button {
+cursor: pointer;
+font-size: 18px;
+align-self: flex-end;
+}
 
 
 
