--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 
 @import "../node_modules/angular-calendar/css/angular-calendar.css";
 @import '~bootstrap/dist/css/bootstrap.min.css';
+@import '~bootstrap-icons/font/bootstrap-icons.css';
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
